# deskwarp

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  ROADMAP.md
crates/api-models/: Cargo.toml  README.md
crates/api-models/src/: lib.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/src/: config.rs  events.rs  main.rs  server.rs  state.rs  wallpaper_commands.rs
crates/daemon/src/server/: helpers.rs  routes.rs
crates/gui/: Cargo.toml  README.md
crates/multi-wallpaper/: Cargo.toml  LICENSE-APACHE  README.md
crates/multi-wallpaper/src/: error.rs  lib.rs  platform.rs  style.rs
crates/multi-wallpaper/src/platform/: linux.rs  macos.rs  windows.rs
crates/multi-wallpaper/src/platform/windows/: com.rs
crates/multi-wallpaper/tests/: api_tests.rs
installer/wix/: Components.wxs  Folders.wxs  Package.wxs
