[package]
name = "deskwarp-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["json"] }
directories = "6.0.0"
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] } # sync, rt, rt-multi-thread
toml = "1.1.2"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tray-icon = "0.23.1"
winit = "0.30.13"

deskwarp-api-models = { path = "../api-models" }
multi-wallpaper = { path = "../multi-wallpaper" }
